# open-mamba

./: .env.example  .gitignore  .gitleaks.toml  Cargo.toml  README.md
.github/workflows/: ci.yml  secret-scan.yml
agents/: auditor.toml  code-deliverer.toml  deployer.toml  protocol-intel.toml
agents/openfang-manifests/: code-reviewer.toml  coder.toml  taifoon-intel.toml
crates/mamba-api/: Cargo.toml
crates/mamba-api/src/: cron_util.rs  main.rs  routes.rs  scheduler.rs  triggers.rs  worker.rs  workflow_runner.rs  workflows.rs
crates/mamba-api/static/: index.html
crates/mamba-bus/: Cargo.toml
crates/mamba-bus/src/: billing_worker.rs  dispatch.rs  lib.rs  openfang.rs  webhook.rs
crates/mamba-chain/: Cargo.toml
crates/mamba-chain/src/: anchor.rs  crypto.rs  lib.rs
crates/mamba-lake/: Cargo.toml
crates/mamba-lake/src/: analytics.rs  lib.rs  schema.rs  store.rs  triggers.rs  workflows.rs
crates/mamba-nemotron/: Cargo.toml
crates/mamba-nemotron/src/: lib.rs
crates/mamba-types/: Cargo.toml
crates/mamba-types/src/: agent.rs  billing.rs  chain.rs  envelope.rs  lib.rs
scripts/: README.md  mamba  solver_skip_rules_weekly.py
