[package]
name = "mamba-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "open-mamba"
path = "src/main.rs"

[dependencies]
mamba-types    = { path = "../mamba-types" }
mamba-lake     = { path = "../mamba-lake" }
mamba-bus      = { path = "../mamba-bus" }
mamba-nemotron = { path = "../mamba-nemotron" }
mamba-chain    = { path = "../mamba-chain" }

tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
dotenvy.workspace = true
cron = "0.12"
