[package]
name = "mamba-chain"
version.workspace = true
edition.workspace = true

[dependencies]
mamba-types = { path = "../mamba-types" }
alloy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hmac.workspace = true
aes-gcm.workspace = true
base64.workspace = true
rand.workspace = true
hex.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
reqwest.workspace = true
