[package]
name = "mamba-lake"
version.workspace = true
edition.workspace = true

[dependencies]
mamba-types = { path = "../mamba-types" }
duckdb.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
